Ref#62607: Fixed the alignment issue in enrolment date selector in custom query report

--- a/styles.css
+++ b/styles.css
@@ -591,3 +591,7 @@ div[id^="wdm-"][id*="-individual"] table.table,
     margin: 1% 0 1% 0;
     border-radius: 5px;
 }
+
+#customQueryReportBlock .input-search .input-search-close {
+    right: 0px !important;
+}
